Bug 308978 - Text in the screenlocker is not readable with darker plasma themes
Summary: Text in the screenlocker is not readable with darker plasma themes
Status: RESOLVED FIXED
Alias: None
Product: kscreensaver
Classification: Unmaintained
Component: locker (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kscreensaver bugs tracking
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-25 11:35 UTC by Hrvoje Senjan
Modified: 2012-11-28 12:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Printscreen of the locker (79.64 KB, image/jpeg)
2012-10-25 11:39 UTC, Raymond Wooninck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2012-10-25 11:35:32 UTC
If one uses a darker plasma theme in combination with light colorscheme (which has black color for active text), both username and password are hardly readable. Root cause is that the new QML-ized screenlocker uses widgets/background for background, which is off course logical, but that is always dark with darker themes. I'm unsure what would be appropriate solution.

Reproducible: Always

Steps to Reproduce:
1. Enable the screenlocker in combination with darker plasma-theme and lighter colorscheme

Actual Results:  
Text of "Username" and "password" are hardly readable.

Expected Results:  
They should be readable to the user in such combination.
Comment 1 Raymond Wooninck 2012-10-25 11:39:06 UTC
Created attachment 74792 [details]
Printscreen of the locker
Comment 2 Raymond Wooninck 2012-10-25 11:41:19 UTC
Looking at the current locker, it seems as if the only part of the text is following the color scheme and/or plasma theme.  The text "the computer was locked by ... " is appearing nicely in White, but the rest of the text just appears in black, which makes things hardly readable. The plasma-theme itself is showing a greyish color on black.
Comment 3 Christoph Feck 2012-10-25 13:28:03 UTC
Marco, can you have a look at the issue? The text is indeed unreadable in the new locker.
Comment 4 Marco Martin 2012-11-28 12:15:56 UTC
Git commit ff03d1be3726faf78164ff61d28ea8e4954d58b2 by Marco Martin.
Committed on 28/11/2012 at 13:15.
Pushed by mart into branch 'master'.

use plasma theme colors

set the plasma theme text color in the qpalette of the unlocker proxy widget

M  +31   -7    ksmserver/screenlocker/greeter/greeter.cpp
M  +7    -0    ksmserver/screenlocker/greeter/greeter.h

http://commits.kde.org/kde-workspace/ff03d1be3726faf78164ff61d28ea8e4954d58b2