use plasma theme colors

set the plasma theme text color in the qpalette of the unlocker proxy widget
BUG:308978